Breathe: Prevent partial offscreen positioning of o2 post dropdown menu on smaller viewports.
Props passoniate, wpamitkumar.
Fixes #4878.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9338 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -1435,6 +1435,13 @@ h2.toc-heading + h3.toc-heading:target {
 	top: 10px;
 }
 
+@media (max-width: 550px) {
+	.post-type-archive-handbook nav.o2-post-actions ul,
+	.single-handbook nav.o2-post-actions ul {
+	    left: 0;
+	}
+}
+
 .post-type-archive-handbook .make-welcome,
 .single-handbook .make-welcome {
 	margin: 0 !important;
